--- a/public/giaodien.html
+++ b/public/giaodien.html
@@ -30,6 +30,7 @@
         <a href="#" onclick="loadPage('quanliban.html')"><i class="fas fa-chair"></i> Quản Lí Bàn</a>
         <a href="#" onclick="loadPage('quanlidonhang.html')"><i class="fas fa-receipt"></i> Quản Lí Hóa Đơn</a>
         <a href="#" onclick="loadPage('quanlidatban.html')"><i class="fas fa-calendar-check"></i> Quản Lí Đặt Bàn</a>
+        <a href="#" onclick="loadPage('contact.html')"><i class="fas fa-envelope"></i> Quản Lý Tin Nhắn</a>
     </div>
 
     <div class="content" id="content">
