change trang quan li khach hang

--- a/public/html/quanlikhachhang.html
+++ b/public/html/quanlikhachhang.html
@@ -52,8 +52,8 @@
                             <td>${user.address}</td>
                             <td>${user.created_at || 'N/A'}</td>
                             <td>
-                                <button class="edit-user-btn" data-id="${userId}"><i class="fa-solid fa-pen-to-square"></i></button>
-                                <button class="delete-user-btn" data-id="${userId}"><i class="fa-solid fa-trash"></i></button>
+                                <button class="edit-user-btn" data-id="${userId}"><i class="fa-solid fa-pen-to-square"></i>Sửa</button>
+                                <button class="delete-user-btn" data-id="${userId}"><i class="fa-solid fa-trash"></i>Xóa</button>
                             </td>
                         </tr>`;
                     });
