--- a/public/html/thongtinadmin.html
+++ b/public/html/thongtinadmin.html
@@ -7,46 +7,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thông Tin Admin</title>
     <style>
-        /* Modal styling */
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1000;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0, 0, 0, 0.5);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
 
-        .modal-content {
-            background-color: #fefefe;
-            padding: 20px;
-            border-radius: 8px;
-            width: 80%;
-            max-width: 500px;
-            position: relative;
-        }
+#admin-info-container {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
+.tieudethongtin {
+    font-size: 24px;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.tenadmin, .diachiadmin, .sdtadmin, .idadmin, .ngaytao {
+    font-size: 18px;
+    color: #555;
+    margin: 10px 0;
+}
+
+.tenadmin span, .diachiadmin span, .sdtadmin span, .idadmin span, .ngaytao span {
+    font-weight: 500;
+    color: #3498db;
+}
+
+@keyframes modalOpen {
+    0% {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.modal-content {
+    animation: modalOpen 0.3s ease-out;
+}
+
+/* Background của modal */
+.thongtinadmin::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);  /* Đổi màu nền để làm tối phần nền phía sau modal */
+    z-index: -1;
+}
+
+/* Cấu trúc button đóng modal (nếu cần) */
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 20px;
+    color: #999;
+    cursor: pointer;
+}
+
+.close-btn:hover {
+    color: #3498db;
+}
 
     </style>
 </head>
-<body>
+<body class="thongtinadmin">
     <div class="modal-content">
         
 
         <div id="admin-info-container">
-            <h2>Thông Tin Admin</h2>
-            <p><strong>Tên:</strong> <span id="name">Đang tải...</span></p>
-            <p><strong>Địa chỉ:</strong> <span id="address">Đang tải...</span></p>
-            <p><strong>Số điện thoại:</strong> <span id="phone">Đang tải...</span></p>
-            <p><strong>Email:</strong> <span id="email">Đang tải...</span></p>
-            <p><strong>ID Admin:</strong> <span id="adminId">Đang tải...</span></p>
-            <p><strong>Ngày tạo:</strong> <span id="created_at">Đang tải...</span></p>
+            <h2 class="tieudethongtin">Thông Tin Admin</h2>
+            <p class="tenadmin"><strong>Tên:</strong> <span id="name">Đang tải...</span></p>
+            <p class="diachiadmin"><strong>Địa chỉ:</strong> <span id="address">Đang tải...</span></p>
+            <p class="sdtadmin"><strong>Số điện thoại:</strong> <span id="phone">Đang tải...</span></p>
+            <p class="idadmin"><strong>ID Admin:</strong> <span id="adminId">Đang tải...</span></p>
+            <p class="ngaytao"><strong>Ngày tạo:</strong> <span id="created_at">Đang tải...</span></p>
         </div>
     </div>
 </body>
